--- a/contact.html
+++ b/contact.html
@@ -16,14 +16,9 @@
     ================================================== -->
     <link rel="stylesheet" href="css/vendor.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/animation.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-
-    <!-- favicons
-    ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <link rel="manifest" href="site.webmanifest" />
+    <script src="js/animation.js"></script>
   </head>
 
   <body id="top">
@@ -66,15 +61,6 @@
               <li class="current"><a href="contact.html">Contact</a></li>
             </ul>
             <!-- s-header__menu-links -->
-
-            <div class="s-header__contact">
-              <a
-                href="contact.html"
-                class="btn btn--primary s-header__contact-btn"
-                >Let's Work Together</a
-              >
-            </div>
-            <!-- s-header__contact -->
           </nav>
           <!-- end s-header__nav -->
         </div>
@@ -101,7 +87,7 @@
 
         <section class="s-pagecontent pagecontent">
           <div class="row width-narrower pagemain">
-            <div class="column xl-12">
+            <div class="column xl-12 fade-in">
               <h2>Let's Work Together</h2>
 
               <div class="row">
@@ -249,12 +235,14 @@
       <!-- # footer 
         ================================================== -->
       <footer class="s-footer">
-        <div class="row s-footer__content">
+        <div class="row s-footer__content fade-in">
           <div class="column xl-6 lg-6 md-12 s-footer__block s-footer__about">
             <h3>About Siddhant</h3>
             <p>
-              I am a passionate web developer with a focus on building
-              responsive, user-centered applications.
+              Hi, I'm Siddhant, a developer specializing in web and mobile
+              applications. I work with technologies like the MERN stack,
+              TypeScript, Flutter, and Firebase to build robust, user-friendly
+              solutions.
             </p>
           </div>
           <div
@@ -264,6 +252,7 @@
             <ul class="link-list">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
+              <li><a href="projects.html">Projects</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
